# aho_corasick_nif

./: .credo.exs  .formatter.exs  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  mix.exs
benchmarks/: find_all.exs  find_first_or_match.exs  new.exs  util.ex
examples/: search.exs
lib/: aho_corasick.ex  aho_corasick_nif.ex
lib/aho_corasick/: nif_bridge.ex  types.ex
lib/aho_corasick_nif/: native.ex  nif_bridge.ex  types.ex
native/aho_corasick_nif/: Cargo.toml  README.md
native/aho_corasick_nif/.cargo/: config.toml
native/aho_corasick_nif/src/: error.rs  lib.rs  types.rs  wrapper.rs
test/: aho_corasick_nif_test.exs  aho_corasick_test.exs
test/aho_corasick_nif/: builder_options_test.exs  match_test.exs  types_test.exs
