[package]
name = "aho_corasick_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "aho_corasick_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1.1.2"
jemallocator = { version = "0.5.4", features = [
    "disable_initial_exec_tls",
    "stats",
] }
rustler = "0.30.0"
